tests/EtaX/EtaX.meth1/EtaX.meth1.04.check
// src:   val t5e: Any => Any = { val t = meth1 _ ; t } // ok
// 2.13-base ok   
// 2.13-head ok    <no change>
// 2.13-new  ok    <no change>
// 3.0-old   ok    <no change>
// 3.0       ok    <no change>
// 3.1-migr  warn 
-- Migration Warning: target/tests/EtaX/EtaX.meth1/EtaX.meth1/EtaX.meth1.04.scala:13:40 
13 |  val t5e: Any => Any = { val t = meth1 _ ; t } // ok
   |                                  ^^^^^^^
   |                       The syntax `<function> _` is no longer supported;
   |                       you can simply leave out the trailing ` _`
1 warning found

// 3.1       error
-- Error: target/tests/EtaX/EtaX.meth1/EtaX.meth1/EtaX.meth1.04.scala:13:40 ----
13 |  val t5e: Any => Any = { val t = meth1 _ ; t } // ok
   |                                  ^^^^^^^
   |                       The syntax `<function> _` is no longer supported;
   |                       you can simply leave out the trailing ` _`
1 error found


ok    ok    ok    ok    ok    warn  error
